--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -54,6 +54,7 @@
     <CodeAnalysisIgnoreGeneratedCode>true</CodeAnalysisIgnoreGeneratedCode>
     <NoWarn>IDE0015,IDE0044;IDE1006</NoWarn>
     <FileAlignment>512</FileAlignment>
+    <CodeAnalysisRuleSet>Librainian.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>embedded</DebugType>
@@ -69,6 +70,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <FileAlignment>512</FileAlignment>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
+    <CodeAnalysisRuleSet>Librainian.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Single Image|AnyCPU'">
     <OutputPath>bin\Single Image\</OutputPath>
@@ -79,7 +81,7 @@
     <RunCodeAnalysis>false</RunCodeAnalysis>
     <LangVersion>8.0</LangVersion>
     <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>Librainian.ruleset</CodeAnalysisRuleSet>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup>
@@ -103,7 +105,7 @@
     <WarningsAsErrors>4014,1998,618,8073</WarningsAsErrors>
     <LangVersion>8.0</LangVersion>
     <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>Librainian.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>bin\x64\Release\</OutputPath>
@@ -114,7 +116,7 @@
     <RunCodeAnalysis>false</RunCodeAnalysis>
     <LangVersion>8.0</LangVersion>
     <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>Librainian.ruleset</CodeAnalysisRuleSet>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Single Image|x64'">
@@ -126,7 +128,7 @@
     <RunCodeAnalysis>false</RunCodeAnalysis>
     <LangVersion>8.0</LangVersion>
     <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>Librainian.ruleset</CodeAnalysisRuleSet>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
@@ -173,6 +175,7 @@
     <Compile Include="Exceptions\NotInitializedException.cs" />
     <Compile Include="Extensions\Error.cs" />
     <Compile Include="Extensions\DisposableBase.cs" />
+    <Compile Include="Extensions\New.cs" />
     <Compile Include="Extensions\RegistryServer.cs" />
     <Compile Include="Financial\Containers\Shopping\ItemCategory.cs" />
     <Compile Include="Financial\Containers\Shopping\TaxableShoppingItem.cs" />
@@ -381,6 +384,7 @@
     <Compile Include="Security\GpwData.cs" />
     <Compile Include="Security\PronounceablePasswordCreator.cs" />
     <Compile Include="Threading\BalancedResourceLoader.cs" />
+    <Compile Include="Threading\AwaitableExtensions.cs" />
     <Compile Include="Threading\IResourceLoader.cs" />
     <Compile Include="Threading\IThrottle.cs" />
     <Compile Include="Threading\IUsableSemaphore.cs" />
@@ -851,6 +855,7 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Librainian.ruleset" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
@@ -881,10 +886,10 @@
       <Version>4.1.0</Version>
     </PackageReference>
     <PackageReference Include="CsvHelper">
-      <Version>12.1.3</Version>
+      <Version>12.2.1</Version>
     </PackageReference>
     <PackageReference Include="Fody">
-      <Version>6.0.2</Version>
+      <Version>6.0.4</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -894,11 +899,16 @@
     <PackageReference Include="LinqFaster.SIMD">
       <Version>1.0.3</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers">
+      <Version>2.9.7</Version>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Database.Collections.Generic">
       <Version>1.9.4</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.SqlServer.SqlManagementObjects">
-      <Version>150.18178.0</Version>
+      <Version>150.18208.0</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.2</Version>
@@ -907,7 +917,7 @@
       <Version>3.3.4</Version>
     </PackageReference>
     <PackageReference Include="NLog">
-      <Version>4.6.7</Version>
+      <Version>4.6.8</Version>
     </PackageReference>
     <PackageReference Include="NLog.Windows.Forms">
       <Version>4.3.0</Version>
