--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -917,7 +917,7 @@
       <Version>150.18208.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualBasic">
-      <Version>10.0.1</Version>
+      <Version>10.3.0</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
@@ -982,9 +982,6 @@
     <PackageReference Include="xunit.extensibility.execution">
       <Version>2.4.1</Version>
     </PackageReference>
-    <PackageReference Include="xunit.runner.utility">
-      <Version>2.4.1</Version>
-    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\Libranian.ico" />
@@ -993,7 +990,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_StartDate="2000/1/1" BuildVersion_BuildVersioningStyle="YearStamp.MonthStamp.DayStamp.Increment" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UpdateFileVersion="True" BuildVersion_UseUniversalClock="True" />
+      <UserProperties BuildVersion_UseUniversalClock="True" BuildVersion_UpdateFileVersion="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="YearStamp.MonthStamp.DayStamp.Increment" BuildVersion_StartDate="2000/1/1" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
