--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -385,6 +385,7 @@
     <Compile Include="Threading\BalancedResourceLoader.cs" />
     <Compile Include="Threading\AwaitableExtensions.cs" />
     <Compile Include="Threading\BackgroundThreadQueue.cs" />
+    <Compile Include="Threading\FasterSemaphore.cs" />
     <Compile Include="Threading\IResourceLoader.cs" />
     <Compile Include="Threading\IThrottle.cs" />
     <Compile Include="Threading\IUsableSemaphore.cs" />
@@ -398,7 +399,6 @@
     <Compile Include="Threading\GCNotification.cs" />
     <Compile Include="Threading\Heap.cs" />
     <Compile Include="Threading\Idler.cs" />
-    <Compile Include="Threading\ReaderWriterFromMicrosoft.cs" />
     <Compile Include="Threading\Job.cs" />
     <Compile Include="Threading\Throttle.cs" />
     <Compile Include="Threading\UnitofWork.cs" />
@@ -600,7 +600,7 @@
     <Compile Include="OperatingSystem\FileSystem\SearchStyle.cs" />
     <Compile Include="Linguistics\Author.cs" />
     <Compile Include="Linguistics\UDC.cs" />
-    <Compile Include="Magic\ABetterClassDispose.cs" />
+    <Compile Include="Utilities\ABetterClassDispose.cs" />
     <Compile Include="Magic\IIocContainer.cs" />
     <Compile Include="Magic\IoC.cs" />
     <Compile Include="Magic\MagicExtensions.cs" />
@@ -835,10 +835,10 @@
     <Compile Include="Threading\TaskExtensions.cs" />
     <Compile Include="Threading\ThreadingExtensions.cs" />
     <Compile Include="Threading\FluentTimer.cs" />
+    <Compile Include="Utilities\DelegateExtensions.cs" />
     <Compile Include="Words.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include=".editorconfig" />
     <None Include="FodyWeavers.xml">
       <SubType>Designer</SubType>
     </None>
@@ -846,7 +846,6 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Librainian.ruleset" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
@@ -880,7 +879,7 @@
       <Version>4.1.0</Version>
     </PackageReference>
     <PackageReference Include="CsvHelper">
-      <Version>12.2.1</Version>
+      <Version>12.2.2</Version>
     </PackageReference>
     <PackageReference Include="Fody">
       <Version>6.0.5</Version>
@@ -990,7 +989,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_UseUniversalClock="True" BuildVersion_UpdateFileVersion="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="YearStamp.MonthStamp.DayStamp.Increment" BuildVersion_StartDate="2000/1/1" />
+      <UserProperties BuildVersion_StartDate="2000/1/1" BuildVersion_BuildVersioningStyle="YearStamp.MonthStamp.DayStamp.Increment" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UpdateFileVersion="True" BuildVersion_UseUniversalClock="True" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
