--- a/Librainian/App.config
+++ b/Librainian/App.config
@@ -5,5 +5,6 @@
   </runtime>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
+    <AppContextSwitchOverrides value="Switch.System.IO.UseLegacyPathHandling=false;Switch.System.IO.BlockLongPaths=false" />
   </startup>
 </configuration>
