--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -105,7 +105,7 @@
     <WarningsAsErrors>4014,1998,618,8073</WarningsAsErrors>
     <LangVersion>latest</LangVersion>
     <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>Librainian.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>BasicCorrectnessRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>bin\x64\Release\</OutputPath>
@@ -611,7 +611,6 @@
     <Compile Include="Internet\Browser\Chrome.cs" />
     <Compile Include="Internet\Inet.cs" />
     <Compile Include="Internet\FTP\BasicFTPClient.cs" />
-    <Compile Include="Internet\Http.cs" />
     <Compile Include="Internet\MultiBrowserForm.cs" />
     <Compile Include="Internet\MultiBrowserForm.Designer.cs">
       <DependentUpon>MultiBrowserForm.cs</DependentUpon>
@@ -619,10 +618,7 @@
     <Compile Include="Internet\Surfer.cs" />
     <Compile Include="Internet\TheInternet.cs" />
     <Compile Include="Internet\WebSite.cs" />
-    <Compile Include="Internet\Wiki\WikiPedia.cs" />
-    <Compile Include="Internet\Wiki\Wiktionary.cs" />
     <Compile Include="Internet\WWWManager.cs" />
-    <Compile Include="Internet\Wiki\YANWiki.cs" />
     <Compile Include="Linguistics\Character.cs" />
     <Compile Include="Linguistics\CharacterCombo.cs" />
     <Compile Include="Linguistics\Library.cs" />
@@ -866,9 +862,6 @@
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="AlphaFS">
-      <Version>2.2.6</Version>
-    </PackageReference>
     <PackageReference Include="Ben.Demystifier">
       <Version>0.1.4</Version>
     </PackageReference>
@@ -891,6 +884,9 @@
     </PackageReference>
     <PackageReference Include="JetBrains.DotMemoryUnit">
       <Version>3.0.20171219.105559</Version>
+    </PackageReference>
+    <PackageReference Include="LanguageExt.Core">
+      <Version>3.3.46</Version>
     </PackageReference>
     <PackageReference Include="LinqFaster.SIMD">
       <Version>1.0.3</Version>
@@ -930,6 +926,9 @@
     <PackageReference Include="NLog.Windows.Forms">
       <Version>4.3.0</Version>
     </PackageReference>
+    <PackageReference Include="Pri.LongPath">
+      <Version>2.0.53</Version>
+    </PackageReference>
     <PackageReference Include="RandomNameGeneratorLibrary">
       <Version>1.2.2</Version>
     </PackageReference>
@@ -965,21 +964,6 @@
     </PackageReference>
     <PackageReference Include="Unicode.net">
       <Version>0.1.2</Version>
-    </PackageReference>
-    <PackageReference Include="xunit">
-      <Version>2.4.1</Version>
-    </PackageReference>
-    <PackageReference Include="xunit.assert">
-      <Version>2.4.1</Version>
-    </PackageReference>
-    <PackageReference Include="xunit.core">
-      <Version>2.4.1</Version>
-    </PackageReference>
-    <PackageReference Include="xunit.extensibility.core">
-      <Version>2.4.1</Version>
-    </PackageReference>
-    <PackageReference Include="xunit.extensibility.execution">
-      <Version>2.4.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
