--- a/Tests/LibrainianTests/Librainian Tests.csproj
+++ b/Tests/LibrainianTests/Librainian Tests.csproj
@@ -93,6 +93,7 @@
     <Compile Include="UsableSemaphoreThrottleTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Rationals, Version=1.3.3.0, Culture=neutral, PublicKeyToken=null" />
     <Reference Include="System" />
     <Reference Include="System.Management" />
     <Reference Include="System.Numerics" />
@@ -101,17 +102,20 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FluentAssertions">
-      <Version>5.9.0</Version>
+      <Version>5.10.0</Version>
     </PackageReference>
     <PackageReference Include="JetBrains.Annotations">
       <Version>2019.1.3</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.3</Version>
     </PackageReference>
     <PackageReference Include="xunit">
       <Version>2.4.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Librainian\Librainian.csproj">
+    <ProjectReference Include="..\..\Librainian\Librainian.csproj">
       <Project>{722E3411-B605-4AF8-ADEA-D2D18BC9CD2C}</Project>
       <Name>Librainian</Name>
     </ProjectReference>
