--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -852,6 +852,9 @@
     <Compile Include="Words.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\.editorconfig">
+      <Link>.editorconfig</Link>
+    </None>
     <None Include="FodyWeavers.xml">
       <SubType>Designer</SubType>
     </None>
@@ -879,7 +882,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Ben.Demystifier">
-      <Version>0.1.4</Version>
+      <Version>0.1.6</Version>
     </PackageReference>
     <PackageReference Include="CommandLineParser">
       <Version>2.7.82</Version>
@@ -888,7 +891,7 @@
       <Version>4.1.0</Version>
     </PackageReference>
     <PackageReference Include="Fody">
-      <Version>6.1.0</Version>
+      <Version>6.1.1</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -907,7 +910,7 @@
       <Version>4.7.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Data.SqlClient">
-      <Version>1.1.0</Version>
+      <Version>1.1.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Database.Collections.Generic">
       <Version>2.0.1</Version>
