--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -78,6 +78,7 @@
 		<PackageReference Include="Rationals" Version="1.4.0" />
 		<PackageReference Include="System.Linq.Async" Version="5.0.0" />
 		<PackageReference Include="System.Management" Version="5.0.0" />
+		<PackageReference Include="xunit.assert" Version="2.4.1" />
 	</ItemGroup>
 	<ItemGroup>
 		<Reference Include="Esent.Collections">
